--- a/css/styles.css
+++ b/css/styles.css
@@ -2,15 +2,28 @@
   text-align: center;
   padding: 30px 0px;
 }
+body {
+  background-color: #92afdd;
+}
 
 .col-md-3 {
   border: 1px solid black;
   text-align: center;
   float: left;
+  width: 20%;
+  height: 250px;
+  background: lightgrey;
+  border-radius: 5%;
+  margin: 0 1%;
+}
+
+.row {
+  padding: 2% 0;
+  height: relative;
 }
 
 .col-md-3 .cardTitle {
-  color: red;
+  color: blue;
 }
 
 .cardTitle {
